--- a/stylesheet.css
+++ b/stylesheet.css
@@ -64,7 +64,8 @@ body {
   color: white;
   justify-content: space-between;
   height: 100vh;
-  background: url(phompto2.png) no-repeat center;
+  /* background: url(phompto2.png) no-repeat center; */
+  background: url(moon.png) no-repeat center;
   background-position: right;
   background-size: 1200px;
   display: flex;
