--- a/stylesheet.css
+++ b/stylesheet.css
@@ -65,7 +65,7 @@ body {
   justify-content: space-between;
   height: 100vh;
   /* background: url(phompto2.png) no-repeat center; */
-  background: url(moon.png) no-repeat center;
+  background: url(lowermoon.png) no-repeat center;
   background-position: right;
   background-size: 1200px;
   display: flex;
