--- a/stylesheet.css
+++ b/stylesheet.css
@@ -65,7 +65,7 @@ body {
   justify-content: space-between;
   height: 100vh;
   /* background: url(phompto2.png) no-repeat center; */
-  background: url(lowermoon.png) no-repeat center;
+  background: url(phompto2.png) no-repeat center;
   background-position: right;
   background-size: 1200px;
   display: flex;
@@ -199,3 +199,12 @@ body {
     transform: translateY(0);
   }
 }
+
+/* .about {
+  display: flex;
+  justify-content: centre;
+  align-items: centre;
+  flex-direction: column;
+  gap: 2rem;
+  padding-bottom: 6rem;
+} */
