--- a/stylesheet.css
+++ b/stylesheet.css
@@ -202,9 +202,9 @@ body {
 
 @media screen and (max-width: 800px) {
   .home {
-    background: url(phomto.png) no-repeat center;
+    background: url(lowermoon.png) no-repeat center;
 
-    background-position: center;
+    background-position: right;
   }
 }
 /* .about {
